--- a/devops/k8s/argocd-app.yaml
+++ b/devops/k8s/argocd-app.yaml
@@ -8,9 +8,9 @@ spec:
     server: https://kubernetes.default.svc
     namespace: default
   source:
-    repoURL: https://github.com/yourusername/rails-app
+    repoURL: https://github.com/RidwanAbdulkadir/rails-app.git
     targetRevision: HEAD
-    path: k8s
+    path: /devopsk8s
   project: default
   syncPolicy:
     automated:
