--- a/devops/Dockerfile
+++ b/devops/Dockerfile
@@ -3,23 +3,36 @@ FROM ruby:3.2
 # Set working directory
 WORKDIR /app
 
-# Install dependencies
-RUN apt-get update -qq && apt-get install -y nodejs postgresql-client yarn
+# Install system dependencies
+RUN apt-get update -qq && apt-get install -y \
+  nodejs \
+  postgresql-client \
+  yarn \
+  build-essential \
+  libpq-dev \
+  curl
 
 # Install bundler
 RUN gem install bundler
 
-# Copy Gemfiles first (for layer caching)
+# Copy Gemfile and Gemfile.lock for better caching
 COPY Gemfile* ./
 
 # Install gems
 RUN bundle install
 
-# Copy the rest of the app, including Rakefile
+# Copy the rest of the app
 COPY . .
 
-# Expose port for the Rails server
+# Set environment variables (optional defaults)
+ENV RAILS_ENV=development
+ENV RACK_ENV=development
+
+# Precompile assets if needed (only for production apps)
+# RUN bundle exec rake assets:precompile
+
+# Expose the Rails port
 EXPOSE 3000
 
-# Start app using Rake task
-CMD ["bundle", "exec", "rake", "start"]
+# Default command to run Rails server
+CMD ["bundle", "exec", "rails", "server", "-b", "0.0.0.0"]
