--- a/rails-docker-app/k8s/rails-deployment.yaml
+++ b/rails-docker-app/k8s/rails-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: rails-app
-        image: ridwan3030/rails-docker-app:latest  # change to your image
+        image: ridwan3030/railsapp:latest  # change to your image
         ports:
         - containerPort: 3000
         env:
