--- a/rails-docker-app/k8s/rails-app/ingress.yaml
+++ b/rails-docker-app/k8s/rails-app/ingress.yaml
@@ -6,7 +6,7 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-  - host: 13.221.226.191
+  - host: nginx
     http:
       paths:
       - path: /
