--- a/rails-docker-app/k8s/rails-app/web-service.yaml
+++ b/rails-docker-app/k8s/rails-app/web-service.yaml
@@ -1,12 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: web
+  name: rails-service
 spec:
+  type: NodePort
   selector:
     app: rails-app
   ports:
-  - protocol: TCP
-    port: 80
-    targetPort: 3000
+    - port: 3000
+      targetPort: 3000
+      nodePort: 32000  # Use a port between 30000-32767
+
 
