--- a/rails-docker-app/k8s/ingress.yaml
+++ b/rails-docker-app/k8s/ingress.yaml
@@ -1,19 +1,21 @@
+# ingress.yaml
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: rails-ingress
+  namespace: default
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
+  ingressClassName: nginx
   rules:
-  - host: 
-    http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: rails-service
-            port:
-              number: 3000
-
+    - host: 
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: rails-service
+                port:
+                  number: 3000
