--- a/rails-docker-app/k8s/ingress.yaml
+++ b/rails-docker-app/k8s/ingress.yaml
@@ -1,4 +1,3 @@
-# ingress.yaml
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -9,8 +8,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: 
-      http:
+    - http:
         paths:
           - path: /
             pathType: Prefix
